# mandelbrot-android

./: .gitignore  .travis.yml  README.md  build.gradle  buildgmp.sh  gradle.properties
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: framebuf_frag.glsl  framebuf_vert.glsl  mandelbrot_frag.glsl  mandelbrot_vert.glsl
app/src/main/cpp/: CMakeLists.txt  mandel_native.cpp
app/src/main/cpp/include/: gmp.h
app/src/main/jni/: Android.mk  Application.mk  build.bat  mandel_native.cpp  mandel_native.h  mandelbrot_wrap.c
app/src/main/res/anim/: slide_in_bottom.xml  slide_out_bottom.xml
app/src/main/res/drawable/: outline_add_circle_24.xml  outline_settings_24.xml  outline_subtract_circle_24.xml  outline_zoom_out_24.xml  toolbar_gradient.xml
gradle/wrapper/: gradle-wrapper.properties
ios/: build_libs.sh
ios/MandelbrotApp/: ContentView.swift  MandelbrotApp.swift
ios/MandelbrotApp.xcodeproj/: project.pbxproj
ios/MandelbrotApp/AdvancedMode/: AdvancedModeView.swift  AdvancedModeViewModel.swift  MandelbrotApp-Bridging-Header.h  MandelbrotGLRenderer.swift  MandelbrotGLView.swift  MandelbrotMetalRenderer.swift  MandelbrotMetalView.swift  MandelbrotNative.swift  mandel_native.cpp  mandel_native.h
ios/MandelbrotApp/AdvancedMode/Shaders/: Mandelbrot.metal  framebuf_frag.glsl  framebuf_vert.glsl  mandelbrot_frag.glsl
ios/MandelbrotApp/Shared/: ColorScheme.swift
ios/MandelbrotApp/SimpleMode/: MandelbrotCalculator.swift  MandelbrotCanvasView.swift  SimpleModeView.swift  SimpleModeViewModel.swift
ios/include/: gmp.h
(+49 files in other folders)
